--- a/package.json
+++ b/package.json
@@ -119,6 +119,7 @@
     "locate-path": "^6.0.0",
     "lodash.merge": "^4.6.2",
     "lru-cache": "^6.0.0",
+    "luxon": "^3.1.0",
     "minimatch": "^3.1.2",
     "minimist": "^1.2.7",
     "mri": "^1.2.0",
